--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             border-width: 0.625em;
             background-color: #023047;
             padding: 1.25em;
-            overflow: scroll;
+            /*overflow: scroll;*/
             align-self: left;
             margin-left: 5vw;
             margin:auto; 
@@ -183,7 +183,7 @@
             border-width: 0.625em;
             background-color: #023047;
             padding-left: 0.5em;
-            overflow: scroll;
+           /* overflow: scroll;*/
             align-self: right;
             text-align: right;
             float: right;
@@ -810,7 +810,7 @@
     <div class="roles"> A.I.-Nerd Engineer Student Web-Developer Equity-Activist Tech-Enthusiast</div>
 
     <div class="container" style="margin-top: 50vh;">
-        <div class=" fade-in1 left-oriented" style="width:50vw; margin:auto;  margin-left: 5vw;">
+        <div class=" fade-in1 left-oriented" style="width:50vw; margin:auto;  margin-left: 5vw; margin-top: 50vh;">
 
             <h2> ABOUT ME </h2>
             <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
@@ -827,7 +827,7 @@
             </p>
         </div>
 
-        <div class="fade-in1 box" style="margin-left: auto;">
+        <div class="fade-in1 box" style="margin-left: auto; margin-top: 50vh;">
             <img src="shriya_pfp.png">
             <!--style="transition-delay: 2.5s;"-->
         </div>
@@ -861,11 +861,11 @@
         style="margin-top: 2vh; margin-left: 5vw; margin-right: 5vw; margin: auto; align-self: center;">
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
-            <p class="project_desc"> A conversational A.I.-based agent utilizing generative learning and Google
+            <p style = "font-size: auto;"> A conversational A.I.-based agent utilizing generative learning and Google
                 Search API to provide
                 responses
                 to mental health questions and respective links to resources. </p>
-            <iframe style="width: auto; height: 40%; color:rgb(197, 105, 1);"
+            <iframe style="width: 100%; height: 40%; color:rgb(197, 105, 1);"
                 src="https://www.wevideo.com/view/3252017933" style="margin: auto; margin-top: 2vh;"> </iframe>
             <p class="project-text">
                 SKILLS:
@@ -875,10 +875,10 @@
         </div>
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> BioKnee 1.0 </h3>
-            <p class="project_desc"> A mechanical knee developed with and sponsored by Texas Instruments technology
+            <p class="project_desc" style = "font-size: auto;"> A mechanical knee developed with and sponsored by Texas Instruments technology
                 in order to help with
                 knee rehabilitation, especially with ACL tears. </p>
-            <iframe style="width: auto; height: 40%; color:rgb(197, 105, 1);"
+            <iframe style="width: 100%; height: 40%; color:rgb(197, 105, 1);"
                 src="https://www.youtube.com/embed/AcX9qemFgyg" style="margin: auto; margin-top: 2vh;"> </iframe>
             <br>
             <p class="project-text">
@@ -889,24 +889,24 @@
         </div>
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> OneVote</h3>
-            <p class="project_desc"> A web application designed to raise awareness about local elections and policies
+            <p class="project_desc" style = "font-size: auto;"> A web application designed to raise awareness about local elections and policies
                 among young adults. Features an conversational agent for answering questions and a page to guide users
                 to local polling stations, provide information on ongoing elections, and access websites of current and
                 new candidates. </p>
-            <iframe style="width: auto; height: 40%; color:rgb(197, 105, 1);"
+            <iframe style="width: 100%; height: 40%; color:rgb(197, 105, 1);"
                 src="https://www.youtube.com/embed/-eGkraEZ6HA" style="margin: auto; margin-top: 2vh;"> </iframe>
             <br>
-            <p class="project-text">
+            <p class="project-text" style = "font-size: auto;">
                 SKILLS:
             </p>
-            <p class="skill-text"> Electrical Circuits,
+            <p class="skill-text" style = "font-size: auto;"> Electrical Circuits,
                 Python, Programming </p>
         </div>
     </div>
     <div class="flex-container fade-in2" style="margin-left: 5vw; margin-right: 5vw; margin: auto; align-self: center;">
         <div class="project-box" style="margin-top: 5vh;">
             <h3 style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
-            <p class="project_desc"> An application with a visually-appleasing user interface with an integrated
+            <p class="project_desc" style = "font-size: auto;"> An application with a visually-appleasing user interface with an integrated
                 model developed using OpenCV and PyTorch to detect handwritten components and convert into a .txt file.
             </p>
             <div class="fade-in2 box3" style="align-self: center; height:40%; width: auto; ">
