--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
             .project-box {
                 /* flex: 1 0 30%; */
                 width: 20vw;
-                height: 50vh;
+                height: 40vh;
                 padding: 5px;
                 display: inline-block;
                 padding: 5px;
@@ -861,87 +861,97 @@
         style="margin-top: 2vh; margin-left: 5vw; margin-right: 5vw; margin: auto; align-self: center;">
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
-            <p style = "font-size: auto;"> A conversational A.I.-based agent utilizing generative learning and Google
+            <div style = "height: 30%;"> <p style = "font-size: auto;"> A conversational A.I.-based agent utilizing generative learning and Google
                 Search API to provide
                 responses
-                to mental health questions and respective links to resources. </p>
-            <iframe style="width: 100%; height: 40%; color:rgb(197, 105, 1);"
+                to mental health questions and respective links to resources. </p> </div>
+            <iframe style="width: 100%; height: 50%; color:rgb(197, 105, 1);"
                 src="https://www.wevideo.com/view/3252017933" style="margin: auto; margin-top: 2vh;"> </iframe>
-            <p class="project-text">
+            <div style = "height: 10%"> <p class="project-text">
                 SKILLS:
             </p>
             <p class="skill-text"> PyTorch, Kaggle,
-                Cloud-instance, Google Search API</p>
+                Cloud-instance, Google Search API</p> </div>
         </div>
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> BioKnee 1.0 </h3>
-            <p class="project_desc" style = "font-size: auto;"> A mechanical knee developed with and sponsored by Texas Instruments technology
-                in order to help with
-                knee rehabilitation, especially with ACL tears. </p>
-            <iframe style="width: 100%; height: 40%; color:rgb(197, 105, 1);"
+
+            <div style = "height: 30%;"> <p style = "font-size: auto;"> A conversational A.I.-based agent utilizing generative learning and Google
+                Search API to provide
+                responses
+                to mental health questions and respective links to resources. </p> </div>
+
+           
+            <iframe style="width: 100%; height: 50%; color:rgb(197, 105, 1);"
                 src="https://www.youtube.com/embed/AcX9qemFgyg" style="margin: auto; margin-top: 2vh;"> </iframe>
             <br>
+            <div style = "height: 10%"> 
             <p class="project-text">
                 SKILLS:
             </p>
             <p class="skill-text"> Electrical Circuits,
-                Python, Programming </p>
+                Python, Programming </p> </div>
         </div>
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> OneVote</h3>
-            <p class="project_desc" style = "font-size: auto;"> A web application designed to raise awareness about local elections and policies
+            <div style="height: 30%;"> <p style = "font-size: auto;"> A web application designed to raise awareness about local elections and policies
                 among young adults. Features an conversational agent for answering questions and a page to guide users
                 to local polling stations, provide information on ongoing elections, and access websites of current and
-                new candidates. </p>
-            <iframe style="width: 100%; height: 40%; color:rgb(197, 105, 1);"
+                new candidates. </p> </div>
+            <iframe style="width: 100%; height: 50%; color:rgb(197, 105, 1);"
                 src="https://www.youtube.com/embed/-eGkraEZ6HA" style="margin: auto; margin-top: 2vh;"> </iframe>
             <br>
+            <div style="height: 10%;">
             <p class="project-text" style = "font-size: auto;">
                 SKILLS:
             </p>
             <p class="skill-text" style = "font-size: auto;"> Electrical Circuits,
                 Python, Programming </p>
+            </div>
         </div>
     </div>
     <div class="flex-container fade-in2" style="margin-left: 5vw; margin-right: 5vw; margin: auto; align-self: center;">
         <div class="project-box" style="margin-top: 5vh;">
             <h3 style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
-            <p class="project_desc" style = "font-size: auto;"> An application with a visually-appleasing user interface with an integrated
+            <div style="height: 20%;"> <p style = "font-size: auto;"> An application with a visually-appleasing user interface with an integrated
                 model developed using OpenCV and PyTorch to detect handwritten components and convert into a .txt file.
-            </p>
-            <div class="fade-in2 box3" style="align-self: center; height:40%; width: auto; ">
+            </p> </div> 
+            <div class="fade-in2 box3" style="align-self: center; height:50%; width: auto; ">
                 <img src="aihandwritingmodel.png">
             </div>
             <br>
+            <div style="height: 10%;">
             <p class="project-text"> SKILLS:
             <p class="skill-text"> OpenCV, PyTorch, HTML/CSS </p>
             </p>
-
+            </div>
         </div>
         <div class="project-box" style="margin-top: 5vh;">
             <h3 style="color: #dcf4fc; margin: auto;"> PenguJump </h3>
-            <p class="project_desc"> An interactive game developed with GreenFoot API and Java utilizing
-                object-oriented programming and inheritance. </p>
+            <div style="height: 30%;"> <p style = "font-size: auto;"> An interactive game developed with GreenFoot API and Java utilizing
+                object-oriented programming and inheritance. </p> </div> 
             <br>
-            <p class="project-text">
+            <div style="height: 10%;"> <p class="project-text">
                 SKILLS:
             <p class="skill-text"> GreenFootAPI, Java, Object-Oriented
                 Programming </p>
             </p>
+            </div>
 
         </div>
         <div class="project-box" style="margin-top: 5vh;">
             <h3 style="color: #dcf4fc; margin: auto;"> STEM/GRAD+ Initiative for Underrepresented Students in Boulder
                 Valley School District </h3>
-            <p class="project_desc">Led STEM Initiative for Underrepresented Youth, proposing exclusive internships
+                <div style="height: 30%;"> <p style = "font-size: auto;">Led STEM Initiative for Underrepresented Youth, proposing exclusive internships
                 via BVSD partnerships. Drafted ideas for CU Boulder grant to fund resources (calculators, tutoring,
-                engineering kits) for under-resourced schools. </p>
+                engineering kits) for under-resourced schools. </p> </div>
             <br>
-            <p class="project-text"">
+            <div style="height: 20%;"> <p class="project-text"">
                 SKILLS:
             </p>
             <p class=" skill-text"> Leadership,
                 Presentation, Collaboration </p>
+                </div>
         </div>
     </div>
 
