--- a/index.html
+++ b/index.html
@@ -787,6 +787,21 @@
                 font-size: 1em;
             }
 
+            @media only screen and (min-width: 1200px){
+                .project-desc {
+                    font-size: 2em;
+                }
+            }
+            @media only screen and (min-width: 768px){
+                .project-desc{
+                    font-size: 1em; 
+                }
+            }
+            @media only screen and (min-width: 390px){
+                .project-desc {
+                    font-size: 0.5em;
+                }
+            }
 
 
 
@@ -861,7 +876,7 @@
         style="margin-top: 2vh; margin-left: 5vw; margin-right: 5vw; margin: auto; align-self: center;">
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
-            <div style = "height: 30%;"> <p style = "font-size: auto;"> A conversational A.I.-based agent utilizing generative learning and Google
+            <div style = "height: 30%;"> <p style = "font-size:100%;"> A conversational A.I.-based agent utilizing generative learning and Google
                 Search API to provide
                 responses
                 to mental health questions and respective links to resources. </p> </div>
@@ -894,7 +909,7 @@
         </div>
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> OneVote</h3>
-            <div style="height: 30%;"> <p style = "font-size: auto;"> A web application designed to raise awareness about local elections and policies
+            <div style="height: 30%;"> <p class = "project-desc"> A web application designed to raise awareness about local elections and policies
                 among young adults. Features an conversational agent for answering questions and a page to guide users
                 to local polling stations, provide information on ongoing elections, and access websites of current and
                 new candidates. </p> </div>
