--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
         style="margin-top: 2vh; margin-left: 5vw; margin-right: 5vw; margin: auto; align-self: center;">
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
-            <div style = "height: 30%;"> <p style = "font-size:100%;"> A conversational A.I.-based agent utilizing generative learning and Google
+            <div style = "height: 30%;"> <p class = "project-desc"> A conversational A.I.-based agent utilizing generative learning and Google
                 Search API to provide
                 responses
                 to mental health questions and respective links to resources. </p> </div>
@@ -891,7 +891,7 @@
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> BioKnee 1.0 </h3>
 
-            <div style = "height: 30%;"> <p style = "font-size: auto;"> A conversational A.I.-based agent utilizing generative learning and Google
+            <div style = "height: 30%;"> <p class = "project-desc"> A conversational A.I.-based agent utilizing generative learning and Google
                 Search API to provide
                 responses
                 to mental health questions and respective links to resources. </p> </div>
@@ -928,7 +928,7 @@
     <div class="flex-container fade-in2" style="margin-left: 5vw; margin-right: 5vw; margin: auto; align-self: center;">
         <div class="project-box" style="margin-top: 5vh;">
             <h3 style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
-            <div style="height: 20%;"> <p style = "font-size: auto;"> An application with a visually-appleasing user interface with an integrated
+            <div style="height: 20%;"> <p class = "project-desc"> An application with a visually-appleasing user interface with an integrated
                 model developed using OpenCV and PyTorch to detect handwritten components and convert into a .txt file.
             </p> </div> 
             <div class="fade-in2 box3" style="align-self: center; height:50%; width: auto; ">
@@ -943,7 +943,7 @@
         </div>
         <div class="project-box" style="margin-top: 5vh;">
             <h3 style="color: #dcf4fc; margin: auto;"> PenguJump </h3>
-            <div style="height: 30%;"> <p style = "font-size: auto;"> An interactive game developed with GreenFoot API and Java utilizing
+            <div style="height: 30%;"> <p class = "project-desc"> An interactive game developed with GreenFoot API and Java utilizing
                 object-oriented programming and inheritance. </p> </div> 
             <br>
             <div style="height: 10%;"> <p class="project-text">
@@ -957,7 +957,7 @@
         <div class="project-box" style="margin-top: 5vh;">
             <h3 style="color: #dcf4fc; margin: auto;"> STEM/GRAD+ Initiative for Underrepresented Students in Boulder
                 Valley School District </h3>
-                <div style="height: 30%;"> <p style = "font-size: auto;">Led STEM Initiative for Underrepresented Youth, proposing exclusive internships
+                <div style="height: 30%;"> <p class = "project-desc">Led STEM Initiative for Underrepresented Youth, proposing exclusive internships
                 via BVSD partnerships. Drafted ideas for CU Boulder grant to fund resources (calculators, tutoring,
                 engineering kits) for under-resourced schools. </p> </div>
             <br>
