--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
             }
         }
 
-
+ @media only screen and (min-width: 768px) and (max-width: 1200px) {
         .container {
             display: inline;
         }
@@ -1709,6 +1709,7 @@
             }
 
             /* add flip card effect for phones */ 
+        } 
     
     </style>
 </head>
