--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 
-    <title>replit</title>
+    <title>Shriya Biddala </title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -846,7 +846,7 @@
             }
         }
 
- @media only screen and (min-width: 768px) and (max-width: 1200px) {
+ @media only screen and (min-width: 768px){
         .container {
             display: inline;
         }
