--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Shriya Biddala </title>
     <link href="style.css" rel="stylesheet" type="text/css" />
@@ -16,7 +16,7 @@
     <script src="https://kit.fontawesome.com/fa913dc807.js" crossorigin="anonymous"></script>
 
     <style>
-                @media only screen and (max-width: 450px) {
+            @media only screen and (max-width: 450px) {
             /*.container {
                 display: inline;
             }
@@ -33,6 +33,7 @@
                 background-color: #011f2f;
                 /*#0365A6;*/
                 overflow: scroll;
+                box-sizing: border-box;
             }
 
             .title {
