added return to home funtionality

--- a/index.html
+++ b/index.html
@@ -1717,7 +1717,7 @@
 
 
 <body>
-    <h4> <a href="#Projects" class="link-orange"> PROJECTS </a> &nbsp; &nbsp; &nbsp; &nbsp; <a href="#Honors"
+    <h4 id = "Home" > <a href="#Projects" class="link-orange"> PROJECTS </a> &nbsp; &nbsp; &nbsp; &nbsp; <a href="#Honors"
             class="link-orange"> HONORS </a> &nbsp;
         &nbsp; &nbsp; &nbsp; <a href="#Contact" class="link-orange"> CONTACT </a> </h4>
     <h3 style="text-align: center"> Hello! I am </h3>
@@ -1769,7 +1769,7 @@
     </div>
 
 
-    <h2 class="fade-in2 proj-cont" style="text-align: center;" id="Projects">PROJECTS</h2>
+    <h2 class="fade-in2 proj-cont" style="text-align: center;" id="Projects"> <a href="#Home" class="link-orange"> PROJECTS </a> </h2>
     <div class="flex-container fade-in2 proj-box-cont">
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
@@ -1889,7 +1889,7 @@
     <div>
         <div class="next-to slideshow-container center fade-in2 honors-cont" id="Honors">
             <div class="mySlides fade">
-                <h2 style="text-align: center;"> HONORS </h2>
+                <h2 style="text-align: center;"> <a href="#Home" class="link-orange"> HONORS </a> </h2>
                 <h3 style="margin-top: -0%; text-align: center;"> <a
                         href="https://www.aspirations.org/2023-national-aspirations-in-computing-award-recipients-announced/"
                         class="link-blue">
@@ -1955,7 +1955,7 @@
     </div>
 
     <div class="fade-in2 fa-3x contact">
-        <h2 class = "contact-text" id="Contact"> Let's Connect
+        <h2 class = "contact-text" id="Contact"> <a href="#Home" class="link-orange"> Let's Connect </a>
             <br>
         </h2>
         <br>
