--- a/index.html
+++ b/index.html
@@ -1955,7 +1955,7 @@
     </div>
 
     <div class="fade-in2 fa-3x contact">
-        <h2 class = "contact-text" id="Contact"> <a href="#Home" class="link-orange"> Let's Connect </a>
+        <h2 class = "contact-text" id="Contact"> <a href="#Home" class="link-orange" style = "color:rgb(194, 103, 0)"> Let's Connect </a>
             <br>
         </h2>
         <br>
@@ -1976,8 +1976,11 @@
                 School email: sbiddala@umich.edu <br> Personal email: shriyarbiddala@gmail.com</span>
         </i>
         <br>
+        <div style = "display: flex; justify-content: space-between;">
         <p class = "copy-right-text">
             &copy;Shriya Biddala</p>
+        <p class = "copy-right-text" style: "padding-right: 0.3125em;"> <a href="#Home" class="link-orange" style = "color:rgb(194, 103, 0)"> Return to Home </a></p>
+        </div>
     </div>
 
 
