--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             .fade-in2 {
                 opacity: 0;
                 transition: opacity 250ms ease-in;
-            }
+            } 
 
 
 
@@ -1675,6 +1675,10 @@
             margin-right: auto;
         }
 
+        .flex-container-proj-2{
+            margin-left: 5vw; margin-right: 5vw; margin: auto; align-self: center;
+        }
+
         /* @media only screen and (min-width: 768px) and (max-height: 1200px){
                 .project-desc {
                     font-size: 0.5em;
@@ -1770,7 +1774,7 @@
 
 
     <h2 class="fade-in2 proj-cont" style="text-align: center;" id="Projects"> <a href="#Home" class="link-orange"> PROJECTS </a> </h2>
-    <div class="flex-container fade-in2 proj-box-cont">
+    <div class="flex-container proj-box-cont">
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
             <div>
@@ -1833,7 +1837,8 @@
             </div>
         </div>
     </div>
-    <div class="flex-container fade-in2" style="margin-left: 5vw; margin-right: 5vw; margin: auto; align-self: center;">
+
+    <div class="flex-container proj-box-cont">
         <div class="project-box" style="margin-top: 5vh;">
             <h3 style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
             <div>
@@ -1852,7 +1857,7 @@
                 </p>
             </div>
         </div>
-        <div class="project-box" style="margin-top: 5vh;">
+        <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> PenguJump </h3>
             <div>
                 <p class="project-desc" style = "font-size: 1em;"> An interactive game developed with GreenFoot API and Java utilizing
@@ -1868,7 +1873,7 @@
             </div>
 
         </div>
-        <div class="project-box" style="margin-top: 5vh;">
+        <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> STEM/GRAD+ Initiative for Underrepresented Students in Boulder
                 Valley School District </h3>
             <div style="height: 30%;">
