--- a/index.html
+++ b/index.html
@@ -510,8 +510,8 @@
                 justify-content: center;
                 align-items: center;
                 /* height: 25em;*/
-                height: 40%;
-                width: 40%;
+                height: 40%; 
+                width: auto; 
                 /*need to fix image proportions across different devices*/
                 border: 0.4em solid #0000;
                 background: linear-gradient(#219EBC, #011f2f) padding-box, linear-gradient(var(--angle),
@@ -1742,6 +1742,8 @@
                 to
                 combine both my technological and activist background to develop real-world tecnological, equitable
                 solutions.
+                <br>
+                My area of focus lies within integrating artificial intelligence to create equitable solutions to solve real-world problems in underresourced communities. 
             </p>
         </div>
 
@@ -1847,7 +1849,7 @@
                     file.
                 </p>
             </div>
-            <div class="fade-in2 box3" style="align-self: center; height:50%; width: auto; ">
+            <div class="fade-in2 box3" style="align-self: center; height:40%; width: auto; ">
                 <img src="aihandwritingmodel.png">
             </div>
             <br>
