--- a/index.html
+++ b/index.html
@@ -869,6 +869,7 @@
                 background-color: #011f2f;
                 /*#0365A6;*/
                 overflow: scroll;
+                overflow-x: hidden;
                 box-sizing: border-box;
             }
 
@@ -1705,6 +1706,7 @@
 
             body {
                 background-color: #011f2f;
+                overflow-x: hidden;
                 /*#0365A6;*/
                 overflow: scroll;
             }
